--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,2 +1,4 @@
-<h1>Home#top</h1>
-<p>Find me in app/views/home/top.html.erb</p>
+<h1>ようこそ Bookers へ！</h1>
+<p><strong>Bookers</strong>ではさまざまな書籍に関するあなたの意見や</p>
+<p>印象を共有し交換することができます</p>
+<p><%= link_to "start", new_book_path %></p>
