--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -13,12 +13,12 @@
 
   <div class="field">
     <%= f.label :title %>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, class: "book_title" %>
   </div>
 
   <div class="field">
     <%= f.label :body %>
-    <%= f.text_area :body %>
+    <%= f.text_area :body, class: "book_body" %>
   </div>
 
   <div class="actions">
