--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,4 +1,4 @@
 <h1>ようこそ Bookers へ！</h1>
 <p><strong>Bookers</strong>ではさまざまな書籍に関するあなたの意見や</p>
 <p>印象を共有し交換することができます</p>
-<p><%= link_to "start", new_book_path %></p>
+<p><%= link_to "start", books_path %></p>
